# ai-summarizer

./: README.md  main.py  pyproject.toml
src/chat_ai/domain/: i_chat_comleter.py
src/chat_ai/infra/: chat_ai_module.py  chatgpt_completer.py
src/chat_ai/service/: chat_ai_summarize_service.py
src/document/domain/: i_document_selector.py
src/document/infra/: document_module.py  document_selector.py
src/document/service/: document_recommend_service.py
